--- a/signup.html
+++ b/signup.html
@@ -12,11 +12,11 @@
         <nav>
             <p>MeShop.</p>
             <ul class="ul-items">
-                <li class="items" ><a href="">Home</a></li>
+                <li class="items" ><a href="./index.html">Home</a></li>
+                <li class="items" ><a href="./shop.html">Shop</a></li>
                 <li class="items" ><a href="./login.html">Login</a></li>
-                <li class="items"><a href="./signup.html">Signup</a></li>
-                <li class="items" id="myCart" ><a href="">MyCart</a></li>
-                <li class="items"><a href=".">Profile</a></li>
+                <li class="items"><a href="">Signup</a></li>
+                <li class="items"><a href="./profile.html">Profile</a></li>
             </ul>
         </nav>
 
