--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <p>MeShop.</p>
             <ul class="ul-items">
                 <li class="items" ><a href="">Home</a></li>
+                <li class="items" ><a href="./shop.html">Shop</a></li>
                 <li class="items" ><a href="./login.html">Login</a></li>
                 <li class="items"><a href="./signup.html">Signup</a></li>
                 <li class="items"><a href="./">Profile</a></li>
