--- a/login.html
+++ b/login.html
@@ -12,8 +12,9 @@
     <nav>
         <p>MeShop.</p>
         <ul class="ul-items">
-            <li class="items" ><a href="">Home</a></li>
-            <li class="items" ><a href="./login.html">Login</a></li>
+            <li class="items" ><a href="./index.html">Home</a></li>
+            <li class="items" ><a href="./shop.html">Shop</a></li>
+            <li class="items" ><a href="">Login</a></li>
             <li class="items"><a href="./signup.html">Signup</a></li>
             
             <li class="items"><a href="./profile.html">Profile</a></li>
