--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
         <nav>
             <p>MeShop.</p>
             <ul class="ul-items">
-                <li class="items" ><a href="">Home</a></li>
-                <li class="items" ><a href="./shop.html">Shop</a></li>
-                <li class="items" ><a href="./login.html">Login</a></li>
-                <li class="items"><a href="./signup.html">Signup</a></li>
-                <li class="items"><a href="./">Profile</a></li>
+                <li class="items"><a href="./">Home</a></li>
+                <li class="items"><a href="./component/shop/shop.html">Shop</a></li>
+                <li class="items"><a href="./component/cart/cart.html">Cart</a></li>
+                <li class="items"><a href="./component/authentication/login/login.html">Login</a></li>
+                <li class="items"><a href="./component/authentication/signup/signup.html">Signup</a></li>
+                <li class="items" id="user-profile"><a href="./component/profile/profile.html">Profile</a></li>
             </ul>
         </nav>
 
         <main class="main-container">
             <div>
                 <h1>MeShop.</h1>
-                <p>It is india's fastest delivary shop</p>
-                <button type="button" id="login" onclick="goToLogin()">Login</button>
+                <p>India's fastest delivery shop</p>
+                <button type="button" id="login-home" onclick="goToLogin()">Login</button>
                 <button type="button" id="signup" onclick="goToSignup()">Signup</button>
             </div>
-            <img src="./undraw_web_shopping_re_owap 1.png" alt="">
+            <img src="./img/undraw_web_shopping_re_owap 1.png" alt="Shopping illustration">
         </main>
     </div>
-
-    <script src="./signup-login-profile.js"></script>
+    <script src="./home.js"></script>
 </body>
 </html>
